name:                InfLength
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Purlox
maintainer:          purlox@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.List.InfLength,
                       Data.List.InfLength.Unsafe
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.3 && < 5
  hs-source-dirs:      Source
  default-language:    Haskell2010
